--- a/client/components/wallet/walletGenerate.html
+++ b/client/components/wallet/walletGenerate.html
@@ -3,6 +3,7 @@
 <div class="row">
   <div class="col-md-6 mr-auto ml-auto">
 
+    <a class="btn btn-sm btn-info" href="{{pathFor 'walletImport'}}">import</a>
     <h2 class="mb-4">Start new wallet</h2>
 
     <h5>Mnemonic wallet seed</h5>
