--- a/client/components/settings.html
+++ b/client/components/settings.html
@@ -1,5 +1,6 @@
 <template name="settings">
   <h3>Settings</h3>
-  <input type="button" class="btn btn-sm btn-info" value="add new account" data-event="addNewAccount">
-  <input type="button" class="btn btn-danger w-100" value="DELETE VAULT" data-event="deleteVault" />
+  <input type="button" class="btn btn-success w-100 mb-2" value="add new account" data-event="addNewAccount">
+  <input type="button" class="btn btn-success w-100 mb-2" value="Export" data-event="addNewAccount">
+  <input type="button" class="btn btn-danger w-100 mb-2" value="DELETE VAULT" data-event="deleteVault" />
 </template>
