UI and basic user account function

--- a/client/components/navbar.html
+++ b/client/components/navbar.html
@@ -24,7 +24,7 @@
         <a class="nav-link {{#if (isActive 'settings')}}active{{/if}}" href="{{pathFor 'settings'}}">Settings</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link" href="#" tabindex="-1" data-event="lockWallet">Lock</a>
       </li>
     </ul>
   </div>
