--- a/client/components/navbar.html
+++ b/client/components/navbar.html
@@ -1,6 +1,6 @@
 <template name="navbar">
 
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark">
   <a class="navbar-brand" href="{{pathFor 'home'}}">Asgard</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
