--- a/client/components/wallet/walletCreate.html
+++ b/client/components/wallet/walletCreate.html
@@ -1,19 +1,85 @@
 <template name="walletCreate">
   <div class="row">
+    {{#unless (param 'method')}}
+      <div class="col-md-8 col-lg-6 ml-auto mr-auto">
+        <h3>Welcome to Asgard</h3>
+        <a class="btn btn-lg btn-primary float-right w-100 mb-4" href="{{pathFor 'walletCreate' method='new'}}">New</a>
+        <a class="btn btn-lg btn-primary float-right w-100 mb-4" href="{{pathFor 'walletCreate' method='import'}}">Import</a>
+      </div>
+    {{else}}
+
+        {{#if isImport}}
+          <div class="col-12">
+            <a class="btn btn-sm btn-info float-right" href="{{pathFor 'walletCreate' method='new'}}">New</a>
+          </div>
+          <div class="col-12">
+            {{> importWallet isMnemonic=isMnemonic}}
+          </div>
+        {{else}}
+          <div class="col-12">
+            <a class="btn btn-sm btn-info float-right" href="{{pathFor 'walletCreate' method='import'}}">Import</a>
+          </div>
+          <div class="col-12">
+            {{> newWallet isMnemonic=isMnemonic wordsList=wordsList}}
+          </div>
+        {{/if}}
+
+      {{/unless}}
+
+  </div>
+</template>
+
+
+<template name="importWallet">
+  <div class="row">
     <div class="col-md-6 mr-auto ml-auto">
-  
-      {{!-- <a class="btn btn-sm btn-info" href="{{pathFor 'walletImport'}}">import</a> --}}
+      <h2 class="mb-4">Import existing wallet</h2>
+      <input id="toggleMnemonic" type="button" class="btn btn-sm btn-info" value="Use HD Mnemonic" data-event="toggleMnemonic">
+
+{{#unless isMnemonic}}
+    <form id="upload-keystore-form" autocomplete="off">
+      <input id="upload-file-input" type="file" class="form-control btn btn-grey" name="keystoreFile">
+      <input type="password" class="form-control form-control-lg" placeholder="password" name="password">
+      <input type="submit" class="form-control form-control-lg btn btn-success" value="Import">
+    </form>
+
+{{else}}
+
+    <form id="import-mnemonic-form" autocomplete="off">
+      <div class="form-row">
+        <div class="form-group col-md-12">
+          <input type="textarea" class="form-control form-control-lg" placeholder="mnemonic" name="mnemonic">
+        </div>
+        <div class="form-group col-md-12">
+          <input type="password" class="form-control form-control-lg" placeholder="password" name="password">
+        </div>
+        <div class="form-group col-md-12">
+          <input type="submit" class="form-control form-control-lg btn btn-success" value="Import">
+        </div>
+      </div>
+    </form>
+
+{{/unless}}
+
+
+    </div>
+  </div>
+</template>
+
+<template name="newWallet">
+  <div class="row">
+    <div class="col-md-6 mr-auto ml-auto">
       <h2 class="mb-4">Start new wallet</h2>
   
       {{#unless isMnemonic}}
-        <input type="button" class="btn btn-sm btn-info" value="Use HD Mnemonic" data-event="toggleMnemonic">
+        <input id="toggleMnemonic" type="button" class="btn btn-sm btn-info" value="Use HD Mnemonic" data-event="toggleMnemonic">
       {{else}}
         <button type="button" class="btn btn-sm btn-warning float-right" data-event="toggleMnemonic"><i class="fa fa-times"></i></button>
         <h5>Mnemonic HD wallet seed</h5>
         <div class="card mb-4">
           <div class="card-body">
             <div class="h3 text-justify">
-              {{#each word in wordslist}}
+              {{#each word in wordsList}}
                 <span class="badge badge-lg badge-light">{{word}}</span>
               {{/each}}
             </div>
@@ -36,4 +102,5 @@
   
     </div>
   </div>
+
 </template>
