--- a/client/lib/styles/main.scss
+++ b/client/lib/styles/main.scss
@@ -3,11 +3,15 @@
 
 $fa-font-path:  "fonts/";
 
+body, html, #app-wrapper {
+  min-height: 100%;
+  min-height: 100vh;
+}
+
 .navbar {
   background-color: #122A32;
-  
 }
 
 #app-wrapper {
-  margin-top: 24px;
+  padding-top: 72px;
 }
