Ui and functionality

--- a/client/components/settings.html
+++ b/client/components/settings.html
@@ -1,6 +1,7 @@
 <template name="settings">
   <h3>Settings</h3>
-  <input type="button" class="btn btn-success w-100 mb-2" value="add new account" data-event="addNewAccount">
-  <input type="button" class="btn btn-success w-100 mb-2" value="Export" data-event="addNewAccount">
+  <!-- <input type="button" class="btn btn-success w-100 mb-2" value="add new account" data-event="addNewAccount"> -->
+  <!-- <input type="button" class="btn btn-success w-100 mb-2" value="Export" data-event="addNewAccount"> -->
+  <button class="btn btn-primary w-100 mb-2" disabled="true">Export</button>
   <input type="button" class="btn btn-danger w-100 mb-2" value="DELETE VAULT" data-event="deleteVault" />
 </template>
