--- a/client/components/navbar.html
+++ b/client/components/navbar.html
@@ -9,9 +9,6 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto float-right">
       <li class="nav-item">
-        <a class="nav-link {{#if (isActive 'walletAccounts')}}active{{/if}}" href="{{pathFor 'walletAccounts'}}">Accounts</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link {{#if (isActive 'walletAssets')}}active{{/if}}" href="{{pathFor 'walletAssets'}}">Assets</a>
       </li>
       <li class="nav-item">
@@ -22,6 +19,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link {{#if (isActive 'settings')}}active{{/if}}" href="{{pathFor 'settings'}}">Settings</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {{#if (isActive 'walletAccounts')}}active{{/if}}" href="{{pathFor 'walletAccounts'}}">Account</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#" tabindex="-1" data-event="lockWallet">Lock</a>
