--- a/client/components/wallet/walletCreate.html
+++ b/client/components/wallet/walletCreate.html
@@ -10,15 +10,9 @@
 
         {{#if isImport}}
           <div class="col-12">
-            <a class="btn btn-sm btn-info float-right" href="{{pathFor 'walletCreate' method='new'}}">New</a>
-          </div>
-          <div class="col-12">
             {{> importWallet isMnemonic=isMnemonic}}
           </div>
         {{else}}
-          <div class="col-12">
-            <a class="btn btn-sm btn-info float-right" href="{{pathFor 'walletCreate' method='import'}}">Import</a>
-          </div>
           <div class="col-12">
             {{> newWallet isMnemonic=isMnemonic wordsList=wordsList}}
           </div>
@@ -33,14 +27,18 @@
 <template name="importWallet">
   <div class="row">
     <div class="col-md-6 mr-auto ml-auto">
+      <a class="btn btn-sm btn-info float-right" href="{{pathFor 'walletCreate' method='new'}}">New</a>
       <h2 class="mb-4">Import existing wallet</h2>
-      <input id="toggleMnemonic" type="button" class="btn btn-sm btn-info" value="Use HD Mnemonic" data-event="toggleMnemonic">
+      <button class="btn btn-sm btn-secondary mb-1" data-event="toggleMnemonic">
+        {{#if isMnemonic}}Use File{{else}}Use HD Mnemonic{{/if}}
+      </button>
 
 {{#unless isMnemonic}}
     <form id="upload-keystore-form" autocomplete="off">
-      <input id="upload-file-input" type="file" class="form-control btn btn-grey" name="keystoreFile">
-      <input type="password" class="form-control form-control-lg" placeholder="password" name="password">
-      <input type="submit" class="form-control form-control-lg btn btn-success" value="Import">
+      <input id="upload-file-button" type="button" class="btn btn-primary w-100 mb-2" value="select file" data-event="triggerFileInput">
+      <input id="upload-file-input" type="file" class="d-none" name="keystoreFile">
+      <input type="password" class="form-control form-control-lg mb-2" placeholder="password" name="password">
+      <input type="submit" class="form-control form-control-lg btn btn-primary" value="Import">
     </form>
 
 {{else}}
@@ -54,7 +52,7 @@
           <input type="password" class="form-control form-control-lg" placeholder="password" name="password">
         </div>
         <div class="form-group col-md-12">
-          <input type="submit" class="form-control form-control-lg btn btn-success" value="Import">
+          <input type="submit" class="form-control form-control-lg btn btn-primary" value="Import">
         </div>
       </div>
     </form>
@@ -69,10 +67,11 @@
 <template name="newWallet">
   <div class="row">
     <div class="col-md-6 mr-auto ml-auto">
+      <a class="btn btn-sm btn-info float-right" href="{{pathFor 'walletCreate' method='import'}}">Import</a>
       <h2 class="mb-4">Start new wallet</h2>
   
       {{#unless isMnemonic}}
-        <input id="toggleMnemonic" type="button" class="btn btn-sm btn-info" value="Use HD Mnemonic" data-event="toggleMnemonic">
+        <button class="btn btn-sm btn-secondary mb-1" data-event="toggleMnemonic">Use HD Mnemonic</button>
       {{else}}
         <button type="button" class="btn btn-sm btn-warning float-right" data-event="toggleMnemonic"><i class="fa fa-times"></i></button>
         <h5>Mnemonic HD wallet seed</h5>
