--- a/client/components/wallet/walletReceive.html
+++ b/client/components/wallet/walletReceive.html
@@ -1,3 +1,8 @@
 <template name="walletReceive">
   <h3>Receive Funds</h3>
+  <div class="card">
+    <div class="card-body">
+      <pre class="small">{{account.address}}</pre>
+    </div>
+  </div>
 </template>
