--- a/client/lib/styles/bootstrap_custom.scss
+++ b/client/lib/styles/bootstrap_custom.scss
@@ -5,12 +5,12 @@ $body-bg: #fff;
 $theme-colors: (
   "primary": #28a795,
   "secondary": #868E96,
-  "success": #B9FF06,
+  // "success": #B9FF06,
   
   "warning": #F49917,
   "danger": #DC3545,
   // "info": #145,
-  "info": #77F9EA,
+  // "info": #77F9EA,
   "dark": #2D2D2D,
 );
 
