--- a/client/lib/styles/main.scss
+++ b/client/lib/styles/main.scss
@@ -1,4 +1,3 @@
-// @import "{}/node_modules/bootstrap/scss/bootstrap";
 // Below must be a symlink to the actual npm package (as originally above)
 
 $fa-font-path:  "fonts/";
@@ -15,3 +14,35 @@ body, html, #app-wrapper {
 #app-wrapper {
   padding-top: 72px;
 }
+
+
+[data-nav] {
+  cursor: pointer;
+}
+
+li.media[data-nav]:hover {
+  background-color: #e5fafb;
+}
+
+
+
+.circle {
+  border-radius: 50%;
+}
+
+
+.circle-icon-md {
+  @extend .circle;
+  width: 42px;
+  height: 42px;
+  box-shadow: rgb(153, 230, 255) 0px 0px 4px 1px;
+}
+.circle-icon-sm {
+  @extend .circle;
+  width: 36px;
+  height: 36px;
+  font-size: 9px;
+  box-shadow: rgb(153, 230, 255) 0px 0px 4px 1px;
+}
+
+// @import "{}/imports/bootstrap/scss/variables";
