--- a/client/components/wallet/walletAssets.html
+++ b/client/components/wallet/walletAssets.html
@@ -7,12 +7,18 @@
     <li class="media d-flex mb-1 p-2 align-items-center" data-nav="{{pathFor "walletAssetDetails" symbol=symbol}}">
       {{!-- <img src="..." class="mr-3" alt="..."> --}}
       <div class="mr-3">
-        {{> circleColorIcon}}
+        {{> circleColorIcon shortSymbol=shortSymbol}}
       </div>
-      <div class="media-body">
+      <div class="media-body d-flex">
 
-        <span class="float-right">{{decimals free}}</span>
-        <div class="font-weight-bolder mt-0 mb-1">{{symbol}}</div>
+        <div class="mr-auto">
+          <h5 class="mb-0">{{tokenName symbol}}</h5>
+          <div class="small">{{symbol}}</div>
+        </div>
+        <div class="">
+          <div class="text-right font-italic color-grey small">$price</div>
+          <div class="text-right">{{decimals free}}</div>
+        </div>
 
       </div>
     </li>
