--- a/client/lib/styles/main.scss
+++ b/client/lib/styles/main.scss
@@ -35,6 +35,7 @@ li.media[data-nav]:hover {
   @extend .circle;
   width: 42px;
   height: 42px;
+  font-size: 12px;
   box-shadow: rgb(153, 230, 255) 0px 0px 4px 1px;
 }
 .circle-icon-sm {
