--- a/client/components/wallet/walletSend.html
+++ b/client/components/wallet/walletSend.html
@@ -14,7 +14,7 @@
       <select class="form-control mb-2" name="asset">
 
         {{#each userAssets}}
-          <option value="test">{{symbol}} ({{availableBalance symbol}})</option>
+          <option value="{{symbol}}">{{symbol}} ({{availableBalance symbol}})</option>
         {{/each}}
 
       </select>
