--- a/client/components/wallet/walletUnlock.html
+++ b/client/components/wallet/walletUnlock.html
@@ -1,9 +1,18 @@
 <template name="walletUnlock">
   <h3>Unlock wallet</h3>
 
-  <form id="wallet-unlock-form" class="form">
-    <input type="password" class="form-control mb-4" name="password">
-    <input type="submit" class="form-control btn btn-primary" value="unlock">
-  </form>
+
+  {{#unless isLoading}}
+
+    <form id="wallet-unlock-form" class="form">
+      <input type="password" class="form-control mb-4" name="password">
+      <input type="submit" class="form-control btn btn-primary" value="unlock">
+    </form>
+
+  {{else}}
+
+    <div>Loading... {{loadingMsg}}</div>
+
+  {{/unless}}
 
 </template>
