Add market data support and store, UI enhancements. Initial feature set completion for prototype

--- a/client/components/wallet/walletAssets.html
+++ b/client/components/wallet/walletAssets.html
@@ -16,7 +16,7 @@
           <div class="small">{{symbol}}</div>
         </div>
         <div class="">
-          <div class="text-right font-italic color-grey small">{{price symbol}}</div>
+          <div class="text-right font-italic color-grey small">{{decimals (price symbol)}}</div>
           <div class="text-right">{{decimals free}}</div>
         </div>
 
