--- a/client/components/navbar.html
+++ b/client/components/navbar.html
@@ -8,23 +8,25 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto float-right">
-      <li class="nav-item">
-        <a class="nav-link {{#if (isActive 'walletAssets')}}active{{/if}}" href="{{pathFor 'walletAssets'}}">Assets</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link {{#if (isActive 'walletSend')}}active{{/if}}" href="{{pathFor 'walletSend'}}">Send</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link {{#if (isActive 'walletTransactionsList')}}active{{/if}}" href="{{pathFor 'walletTransactionsList'}}">Transactions</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link {{#if (isActive 'walletReceive')}}active{{/if}}" href="{{pathFor 'walletReceive'}}">Receive</a>
-      </li>
+      {{#if isUnlocked}}
+        <li class="nav-item">
+          <a class="nav-link {{#if (isActive 'walletAssets')}}active{{/if}}" href="{{pathFor 'walletAssets'}}">Assets</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {{#if (isActive 'walletSend')}}active{{/if}}" href="{{pathFor 'walletSend'}}">Send</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {{#if (isActive 'walletTransactionsList')}}active{{/if}}" href="{{pathFor 'walletTransactionsList'}}">Transactions</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {{#if (isActive 'walletReceive')}}active{{/if}}" href="{{pathFor 'walletReceive'}}">Receive</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link {{#if (isActive 'walletAccounts')}}active{{/if}}" href="{{pathFor 'walletAccounts'}}">Account</a>
+        </li>
+      {{/if}}
       <li class="nav-item">
         <a class="nav-link {{#if (isActive 'settings')}}active{{/if}}" href="{{pathFor 'settings'}}">Settings</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link {{#if (isActive 'walletAccounts')}}active{{/if}}" href="{{pathFor 'walletAccounts'}}">Account</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#" tabindex="-1" data-event="lockWallet">Lock</a>
