--- a/client/components/settings.html
+++ b/client/components/settings.html
@@ -2,6 +2,6 @@
   <h3>Settings</h3>
   <!-- <input type="button" class="btn btn-success w-100 mb-2" value="add new account" data-event="addNewAccount"> -->
   <!-- <input type="button" class="btn btn-success w-100 mb-2" value="Export" data-event="addNewAccount"> -->
-  <button class="btn btn-primary w-100 mb-2" disabled="true">Export</button>
+  <a href="{{downloadLink}}" download="keystore.txt" class="btn btn-primary w-100 mb-2">Export</a>
   <input type="button" class="btn btn-danger w-100 mb-2" value="DELETE VAULT" data-event="deleteVault" />
 </template>
