--- a/client/components/wallet/walletReceive.html
+++ b/client/components/wallet/walletReceive.html
@@ -3,6 +3,9 @@
   <div class="card">
     <div class="card-body">
       <pre class="small">{{account.address}}</pre>
+
+      <div id="qr-container"></div>
+
     </div>
   </div>
 </template>
