--- a/client/components/widgets/circleColorIcon.html
+++ b/client/components/widgets/circleColorIcon.html
@@ -1,5 +1,5 @@
 <template name="circleColorIcon">
 
-  <div {{circleAttributes shortSymbol}}><div class="text-center w-100">{{shortSymbol}}</div></div>
+  <div class="circle-icon-{{size}} d-flex align-items-center text-white" style="{{circleStyle shortSymbol}}"><div class="text-center w-100">{{shortSymbol}}</div></div>
 
 </template>
