--- a/client/components/wallet/walletAccounts.html
+++ b/client/components/wallet/walletAccounts.html
@@ -1,17 +1,42 @@
 <template name="walletAccounts">
-  <h3>Account</h3>
+  <h5 class="text-center">Account</h5>
   
-  <dl>
-    <dt>Address</dt>
-    <dd>{{user.address}}</dd>
-    <dt>Private Key</dt>
-    <dd>{{user.privateKey}}</dd>
-    <dt>Keystore Version</dt>
-    <dd>v {{user.keystore.version}}</dd>
-    <dt>Client Network</dt>
-    <dd>{{client.network}}</dd>
-    <dt>Chain ID</dt>
-    <dd>{{client.chainId}}</dd>
-  </dl>
+  {{!-- Nav Tabs --}}
+  <ul class="nav nav-tabs d-flex justify-content-center mb-4">
+    <li class="nav-item">
+      <a class="nav-link{{#unless isTestnet}} active{{/unless}}" href="#" data-event="toggleNetwork">Testnet</a>
+    </li>
+    <li class="nav-item disabled">
+      <a class="nav-link{{#if isTestnet}} active{{/if}}" href="#" data-event="toggleNetwork">Mainnet</a>
+    </li>
+  </ul>
+
+  <div class="row mt-3">
+    <div class="col-md-3">
+      <div class="small">Account</div>
+      <div>{{user.address}}</div>
+    </div>
+    <div class="col-md-3">
+      <div class="small">Keystore Version</div>
+      <div>{{user.keystore.version}}</div>
+    </div>
+    <div class="col-md-3">
+      <div class="small">Network</div>
+      <div class="text-capitalize">{{client.network}}</div>
+    </div>
+    <div class="col-md-3">
+      <div class="small">Chain ID</div>
+      <div class="text-capitalize">{{client.chainId}}</div>
+    </div>
+  </div>
+
+
+
+  <input type="button" class="btn btn-primary w-100 my-5" value="Lock Wallet" data-event="lockWallet">
+
+  <h5>Wallet Management</h5>
+  <input type="button" class="btn btn-primary w-100 my-2" value="View Phrase" data-event="viewPhrase">
+  <a href="{{downloadLink}}" download="keystore.txt" class="btn btn-primary w-100 mb-2">Export Keystore</a>
+  <input type="button" class="btn btn-danger w-100 my-3" value="Remove Wallet" data-event="deleteVault" />
 
 </template>
