First pass full initial interface design specs implementation

--- a/client/components/wallet/walletAssets.html
+++ b/client/components/wallet/walletAssets.html
@@ -12,7 +12,7 @@
       <div class="media-body d-flex">
 
         <div class="mr-auto">
-          <h5 class="mb-0">{{tokenName symbol}}</h5>
+          <div class="h5 mb-0">{{tokenName symbol}}</div>
           <div class="small">{{symbol}}</div>
         </div>
         <div class="">
