--- a/client/components/wallet/walletAccounts.html
+++ b/client/components/wallet/walletAccounts.html
@@ -11,30 +11,31 @@
     </li>
   </ul>
 
+
   <div class="row mt-3">
-    <div class="col-md-3">
+    <div class="col-md-3 mb-4">
       <div class="small">Account</div>
       <div>{{user.address}}</div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 mb-4">
       <div class="small">Keystore Version</div>
       <div>{{user.keystore.version}}</div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 mb-4">
       <div class="small">Network</div>
       <div class="text-capitalize">{{client.network}}</div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 mb-4">
       <div class="small">Chain ID</div>
       <div class="text-capitalize">{{client.chainId}}</div>
     </div>
   </div>
 
 
-
   <input type="button" class="btn btn-primary w-100 my-5" value="Lock Wallet" data-event="lockWallet">
 
   <h5>Wallet Management</h5>
+
   <input type="button" class="btn btn-primary w-100 my-2" value="View Phrase" data-event="viewPhrase">
   <a href="{{downloadLink}}" download="keystore.txt" class="btn btn-primary w-100 mb-2">Export Keystore</a>
   <input type="button" class="btn btn-danger w-100 my-3" value="Remove Wallet" data-event="deleteVault" />
