--- a/client/components/wallet/walletSend.html
+++ b/client/components/wallet/walletSend.html
@@ -1,42 +1,70 @@
 <template name="walletSend">
-  <h5 class="text-center">Send {{shortSymbol (param 'asset')}}</h5>
+
+  <h5 class="text-center mb-3">Send {{#if (param 'asset')}}{{shortSymbol (param 'asset')}}{{else}}Funds{{/if}}</h5>
 
   {{#if (param 'asset')}}
 
-  <div class="media">
+    <div class="media my-4">
 
-    <div class="d-flex mr-3">
+      <div class="d-flex mr-3">
 
-      {{> circleColorIcon shortSymbol=(shortSymbol (param 'asset')) size="md"}}
+        {{> circleColorIcon shortSymbol=balances.shortSymbol size="md"}}
 
+      </div>
+
+      <div class="media-body">
+        <div class="mt-0">{{asset.name}} ({{balances.shortSymbol}})</div>
+        <a href="#" class="small">Change</a>
+      </div>
     </div>
-
-    <div class="media-body">
-      <div class="mt-0">{{asset.name}}</div>
-      <a href="#">Change</a>
-    </div>
-  </div>
-
-
-    <div class="font-italic">Available balance: {{availableBalance (param 'asset')}}</div>
 
   {{/if}}
 
   <form id="send-transaction-form" class="form" autocomplete="off">
 
-    <input class="form-control mb-2" type="text" name="recipient" placeholder="recipient">
-    <input class="form-control mb-2" type="text" name="amount" placeholder="amount">
+    <div class="form-row">
 
-    {{#unless (param 'asset')}}
-      <select class="form-control mb-2" name="asset">
+      <div class="form-group col-md-12 mb-2">
+        <label for="inputRecipient">Recipient</label>
+        <input type="text" class="form-control mb-3" name="recipient" id="inputRecipient" aria-describedby="amountHelp" placeholder="recipient">
+        <small id="amountHelp" class="form-text text-warning">{{recipientError}}</small>
+      </div>
 
-        {{#each userAssets}}
-          <option value="{{symbol}}">{{symbol}} ({{availableBalance symbol}})</option>
-        {{/each}}
+      {{#unless (param 'asset')}}
+        <div class="form-group col-md-12 mb-2">
+          <label for="inputAsset">Asset</label>
+          <select class="form-control custom-select" id="inputAsset" name="asset">
 
-      </select>
-    {{/unless}}
+            {{#each userAssets}}
+              <option value="{{symbol}}">{{symbol}} ({{free}})</option>
+            {{/each}}
 
-    <input class="btn btn-primary w-100" type="submit" value="submit">
+          </select>
+          <small class="form-text text-warning">{{assetError}}</small>
+        </div>
+      {{/unless}}
+
+      <div class="form-group col-md-12 mb-2">
+        <label for="inputAmount">Amount</label>
+        <input type="text" class="form-control mb-3" name="amount" id="inputAmount" aria-describedby="amountHelp" placeholder="0.00">
+        <small class="form-text text-{{#if amountError}}warning{{else}}accent{{/if}}">{{#if amountError}}{{amountError}}{{else}}{{#if (param 'asset')}}Available balance: {{balances.free}}{{/if}}{{/if}}</small>
+      </div>
+
+
+      <div class="form-group col-md-12 mt-2">
+        <input type="submit" class="form-control btn btn-primary" value="Send" id="inputPassword4">
+      </div>
+
+
+    </div>
+    {{!-- <input class="form-control mb-2" type="text" name="recipient" placeholder="recipient"> --}}
+    {{!-- <input class="form-control mb-2" type="text" name="amount" placeholder="amount"> --}}
+
   </form>
+  {{!-- {{> transferTransactionForm}} --}}
+</template>
+
+
+<template name="transferTransactionForm">
+
 </template>
