--- a/client/lib/styles/main.scss
+++ b/client/lib/styles/main.scss
@@ -1,11 +1,23 @@
 // Below must be a symlink to the actual npm package (as originally above)
 @import './bootstrap_custom';
+// @import '@fortawesome/fontawesome-free/css/all.min.css'; // this don't work from node_modules?
+// use javascript for above instead
 
-$fa-font-path:  "fonts/";
+// $fa-font-path:  "fonts/";
+$letter-spacing-base: .1rem;
+$headings-letter-spacing: $letter-spacing-base * 1.3;
+$text-letter-spacing: $letter-spacing-base * .7;
 
 body, html, #app-wrapper {
   min-height: 100%;
   min-height: 100vh;
+  letter-spacing: $text-letter-spacing;
+}
+
+h1, h2, h3, h4 ,h5 {
+  // pointer-events: none;
+  text-transform: uppercase;
+  letter-spacing: $headings-letter-spacing;
 }
 
 
@@ -40,15 +52,19 @@ li.media[data-nav]:hover {
   margin: 0;
   >.breadcrumb-item {
     color: $Accent-Green;
+    font-family: Exo2;
   }
 }
 
 // Buttons
 .btn {
   text-transform: uppercase;
+  letter-spacing: $text-letter-spacing;
 }
 .btn-text {
   color: $Accent-Green;
+  font-family: $font-family-sans-serif;
+  font-weight: 400;
 }
 
 .btn-primary {
@@ -68,6 +84,7 @@ li.media[data-nav]:hover {
     // Use links for styling because they get 'active' class
     // Clear border styles
     > .nav-link, .nav-link:hover, .nav-link.active, .nav-link.active:hover {
+      font-weight: $headings-font-weight;
       border: none;
       border-bottom: 2px solid transparent;
     }
@@ -97,10 +114,39 @@ li.media[data-nav]:hover {
 // Forms
 .form-text { 
   position: absolute;
-  margin-top: -10px;
+  margin-top: -12px;
 }
 
+// Tables 
+.table-sm th, .table-sm td {
+  font-size: $font-size-base * .8;
+  letter-spacing: $text-letter-spacing * .8;
+}
+// for custom responsive table content
+.table td {
+  // position: relative;
+  // :before {
+  //   content: '';
+  //   display: inline-block;
+  // }
+}
 
+// .table td span.text-truncate {
+//   // overflow: hidden;
+//   // white-space: nowrap;
+//   // text-overflow: ellipsis;
+//   position: absolute;
+//   width: 100%;
+// }
+
+
+// Typography, Fonts, & Text
+.font-size-h1 { font-size: $h1-font-size; }
+.font-size-h2 { font-size: $h2-font-size; }
+.font-size-h3 { font-size: $h3-font-size; }
+.font-size-h4 { font-size: $h4-font-size; }
+.font-size-h5 { font-size: $h5-font-size; }
+.font-size-h6 { font-size: $h6-font-size; }
 
 // Custom General Utilities
 
@@ -111,10 +157,6 @@ li.media[data-nav]:hover {
 }
 
 
-h1, h2, h3, h4 ,h5 {
-  pointer-events: none;
-  text-transform: uppercase;
-}
 
 
 
@@ -128,9 +170,10 @@ h1, h2, h3, h4 ,h5 {
 
 .circle-icon-lg {
   @extend .circle;
-  width: 48px;
-  height: 48px;
-  font-size: 12px;
+  width: 52px;
+  height: 52px;
+  font-size: 14px;
+  font-weight: bold;
   // box-shadow: rgb(47, 74, 87) 0px 0px 4px 1px;
   border-color: rgb(44, 50, 54);
   
@@ -139,9 +182,10 @@ h1, h2, h3, h4 ,h5 {
 
 .circle-icon-md {
   @extend .circle;
-  width: 42px;
-  height: 42px;
+  width: 46px;
+  height: 46px;
   font-size: 11px;
+  font-weight: bold;
   // box-shadow: rgb(47, 74, 87) 0px 0px 4px 1px;
   border-color: rgb(44, 50, 54);
   
@@ -152,6 +196,7 @@ h1, h2, h3, h4 ,h5 {
   width: 36px;
   height: 36px;
   font-size: 9px;
+  font-weight: bold;
   // box-shadow: rgb(7, 17, 20) 0px 0px 4px 1px;
   border-color: rgb(44, 50, 54);
 }
