major ui theming and components

--- a/client/components/wallet/walletAccounts.html
+++ b/client/components/wallet/walletAccounts.html
@@ -1,5 +1,5 @@
 <template name="walletAccounts">
-  <h5 class="text-center">Account</h5>
+  <h5 class="text-center mb-4">Account</h5>
   
   {{!-- Nav Tabs --}}
   <ul class="nav nav-tabs d-flex justify-content-center mb-4">
