--- a/client/components/wallet/walletReceive.html
+++ b/client/components/wallet/walletReceive.html
@@ -1,13 +1,11 @@
 <template name="walletReceive">
-  <h5 class="text-center mb-3">Receive Funds</h5>
+  <h5 class="text-center mb-4">Receive Funds</h5>
   <div class="card mt-3 border-0">
 
-    <div class="card-body ">
+    <div class="card-body text-center">
 
-      <div class="rounded d-inline-block mx-auto" id="qr-container"></div>
-
+      <div class="rounded d-inline-block mx-auto mb-3" id="qr-container"></div>
       <div class=""><span class="font-weight-bold">Address</span> {{account.address}}</div>
-
 
     </div>
   </div>
