--- a/client/components/wallet/walletTransactionsList.html
+++ b/client/components/wallet/walletTransactionsList.html
@@ -1,7 +1,7 @@
 <template name="walletTransactionsList">
 
   {{#unless eq type 'table'}}
-    <h5 class="text-center">Transactions</h5>
+    <h5 class="text-center mb-4">Transactions</h5>
 
     {{#unless transactions}}<div class="text-italic text-muted">No transactions yet...</div>{{/unless}}
 
