--- a/client/components/navbar/navbarClear.html
+++ b/client/components/navbar/navbarClear.html
@@ -6,8 +6,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto float-right pr-3">
+  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+    <ul class="navbar-nav float-right pr-3">
       <li class="nav-item">
         <a class="nav-link{{#if isActiveRoute name='settings'}} disabled{{/if}}" href="{{pathFor 'settings'}}"><i class="fa fa-lg fa-cog"></i></a>
       </li>
