--- a/client/components/wallet/walletNew/walletImport.html
+++ b/client/components/wallet/walletNew/walletImport.html
@@ -23,15 +23,19 @@
         <form id="upload-keystore-form" class="form" autocomplete="off">
           <div class="form-row">
             <div class="form-group col-md-12">
-              <input id="upload-file-button" type="button" class="form-control btn btn-primary mb-3" value="select file" data-event="triggerFileInput">
-              <small id="fileHelp" class="form-text text-{{formFileHelpMsg.color}}">{{formFileHelpMsg.text}}</small>
+              <button id="upload-file-button" type="button" class="form-control btn btn-primary mb-3" data-event="triggerFileInput">
+                <span>Select File</span>
+                <button type="button" class="btn btn-sm btn-dark btn-overlay d-none" data-event="fileReset"><i class="fa fa-times"></i></button>
+              </button>
+              <small id="fileHelp" class="form-text text-warning">{{fileError}}</small>
             </div>
+
             <input id="upload-file-input" type="file" class="d-none" name="keystoreFile">
 
             <div class="form-group col-md-12">
               <label for="inputPassword">Encryption Password</label>
               <input type="password" class="form-control mb-3" name="password" id="inputPassword" aria-describedby="passwordHelp" placeholder="password">
-              <small id="passwordHelp" class="form-text text-{{formPWHelpMsg.color}}">{{formPWHelpMsg.text}}</small>
+              <small id="passwordHelp" class="form-text text-warning">{{pwError}}</small>
             </div>
 
             <div class="form-group col-md-12">
@@ -46,15 +50,23 @@
         <form id="import-mnemonic-form" class="form" autocomplete="off">
           <div class="form-row">
             <div class="form-group col-md-12">
-              <label for="inputPassword">Phrase</label>
-              <input type="text" id="wordlist-input" class="form-control mb-3" placeholder="enter phrase..." name="mnemonic">
-              <small id="mnemonicHelp" class="form-text text-{{formMnemonicHelpMsg.color}}">{{formMnemonicHelpMsg.text}}</small>
+              <label for="inputMnemonic">Phrase</label>
+              <input type="text" id="inputMnemonic" class="form-control mb-3" placeholder="enter phrase" name="mnemonic">
+              <small id="mnemonicHelp" class="form-text text-warning">{{mnemonicError}}</small>
             </div>
+
             <div class="form-group col-md-12">
-              <label for="inputPassword">Encryption Password</label>
+              <label for="inputPassword">New Password</label>
               <input type="password" class="form-control mb-3" name="password" id="inputPassword" aria-describedby="passwordHelp" placeholder="password">
-              <small id="passwordHelp" class="form-text text-{{formPWHelpMsg.color}}">{{formPWHelpMsg.text}}</small>
+              <small id="passwordHelp" class="form-text text-warning">{{pwError}}</small>
             </div>
+
+            <div class="form-group col-md-12">
+              <label for="repeatPassword">Repeat Password</label>
+              <input type="password" class="form-control mb-3" name="repeatPassword" id="repeatPassword" aria-describedby="repeatPasswordHelp" placeholder="password">
+              <small id="repeatPasswordHelp" class="form-text text-warning">{{repeatPwError}}</small>
+            </div>
+
             <div class="form-group col-md-12">
               <input type="submit" class="form-control form-control-lg btn btn-primary" value="Import">
             </div>
