--- a/client/components/home.html
+++ b/client/components/home.html
@@ -4,10 +4,10 @@ we are setting up links...
 if we dont have a wallet,
 
 <div>
-create <a href="{{pathFor 'walletGenerate'}}">new wallet</a>
+create <a href="{{pathFor 'walletCreate'}}">new wallet</a>
 </div>
 
 <div>
-if we have a wallet we are going to <a href="{{pathFor 'walletView'}}">view it</a>
+if we have a wallet we are going to <a href="{{pathFor 'walletAccounts'}}">view it</a>
 </div>
 </template>
